<resources>
    <string name="app_name">Status</string>
    <string name="app_desc">A material design status bar replacement. No root needed.</string>
    <string name="action_settings">Settings</string>
    <string name="action_setup">Setup</string>
    <string name="action_access_grant">Grant Access</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_ok">OK</string>
    <string name="action_more">More</string>
    <string name="action_add_apps">Add Apps</string>
    <string name="action_search">Search</string>
    <string name="action_about">About</string>
    <string name="action_gplus">Google+</string>
    <string name="action_play">Play Store</string>
    <string name="action_dribbble">Dribbble</string>
    <string name="action_twitter">Twitter</string>
    <string name="action_website">Website</string>
    <string name="action_github">GitHub</string>
    <string name="action_libraries">Open Source Licenses</string>
    <string name="action_enable">Enable</string>
    <string name="action_disable">Disable</string>
    <string name="action_reset">Reset</string>
    <string name="action_tutorial">Reset Tutorial</string>
    <string name="action_pick_image_color">Pick Color from Image</string>
    <string name="action_community">Support Community</string>
    <string name="action_dismiss">Dismiss</string>
    <string name="action_add_style">Add Style</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit_style">Edit Icon Style</string>
    <string name="action_policy">Privacy Policy</string>
    <string name="action_new_backup">New Backup</string>
    <string name="action_save">Save</string>
    <string name="action_delete_backup">Delete this Backup</string>
    <string name="action_restore_backup">Restore from this Backup</string>
    <string name="action_save_backup">Overwrite backup</string>
    <string name="action_create_backup">Create Backup</string>
    <string name="action_set_color">Set Color</string>
    <string name="action_show_status">Show Status</string>
    <string name="action_hide_status">Hide Status</string>
    <string name="action_app_settings">App Settings</string>
    <string name="action_edit">Edit</string>
    <string name="action_create_style">Create Icon Style</string>
    <string name="reset_all">Reset All</string>
    <string name="notifications_disable">Disable All Notifications</string>
    <string name="notifications_enable">Enable All Notifications</string>
    <string name="prompt_name">Type a name here…</string>
    <string name="prompt_backup_name">Backup Name</string>
    <string name="error_no_text_name">Please type a name…</string>
    <string name="error_name_exists">An item with this name already exists.</string>
    <string name="error_missing_icons">You are missing one or more required icons.</string>
    <string name="err_battery_already_ignored">Battery optimizations are already ignored! You can proceed to the next step.</string>
    <string name="msg_notification_switch_enable">Please enable the switch next to \"Status Service\".</string>
    <string name="msg_battery_optimizations_switch_enable">Turn on the switch next to \"Status\". You may need to scroll down… a lot.</string>
    <string name="msg_accessibility_switch_enable">Please turn on the service titled \"Status Service\". You may need to scroll down for it to become visible.</string>
    <string name="msg_missing_storage_permission">Please grant access to external storage in order to use this functionality.</string>
    <string name="msg_show_individual_screens">Show %1$d individual screens…</string>
    <string name="service_name">Status Service</string>
    <string name="service_name_general">Accessibility Service</string>
    <string name="service_desc">\'Status Service\' needs to be enabled in order to detect window changes to update the status bar. On some phones you may need to scroll to the bottom of the screen before it becomes visible.</string>
    <string name="service_desc_short">Status uses this accessibility service to detect screen updates and notifications on older devices.</string>
    <string name="service_desc_long"><![CDATA[Status allows users to customize their status bar for better readability, aesthetic, or functionality, allowing them easier and faster use of their devices. \n\nStatus requires this accessibility service to detect the current app that is displaying on the screen in order to adapt to its color scheme and layout. It also uses this service to listen for notifications on older devices that do not have the NotificationListenerService API.]]></string>
    <string name="notifications_compat">Compatibility Mode</string>
    <string name="notifications_compat_desc">On some versions of android the app cannot use the standard notification listener API to display the notification icons. I have found a way to detect them through the accessibility service, however it cannot detect when a notification has been dismissed. Thus, it removes all notifications whenever the notification panel is opened. If you do not like this, you can either check for a firmware update or disable the notifications in the settings menu. Please note: this setting will break the notification icons on some devices. It is recommended not to enable this feature on versions of android that are newer than Lollipop.</string>
    <string name="service_start_stop">Status Bar Service</string>
    <string name="notification_name">Notification Access</string>
    <string name="notification_desc">The app needs to read incoming notifications in order to display notification icons on the status bar.</string>
    <string name="permissions_name">Additional Permissions</string>
    <string name="permissions_desc">This app needs a few additional permissions in order to access parts of the phone relevant to the status bar. An explanation of why these are needed is provided in the Status\'s Play Store page.</string>
    <string name="optimizations_name">Ignore Battery Optimizations (optional)</string>
    <string name="optimizations_desc">Battery Optimizations will cause Status to stop working as the system will occasionally close Status to save battery life. You may have to scroll quite a bit before you find Status in the list.</string>
    <string name="overlay_name">Draw Overlays</string>
    <string name="overlay_desc">The app needs to be able to draw an overlay on top of the screen so that it can show the status bar.</string>
    <string name="tab_settings">Settings</string>
    <string name="tab_icons">Icons</string>
    <string name="tab_apps">Apps</string>
    <string name="tab_help">Help</string>
    <string name="section_colors">Colors</string>
    <string name="section_icons">Icons</string>
    <string name="section_animations">Animations</string>
    <string name="section_notifications">Notifications</string>
    <string name="section_other">Other</string>
    <string name="preference_show_clock">Show Clock</string>
    <string name="preference_24h">Use 24 Hour Time Format</string>
    <string name="preference_24h_desc">The clock will show in a 24 hour time format if this is turned on.</string>
    <string name="preference_ampm">Show AM/PM in Clock</string>
    <string name="preference_ampm_desc">Choose whether to show the AM/PM indicator in the clock.</string>
    <string name="preference_date">Show Current Date</string>
    <string name="preference_date_desc">Shows the date next to the time in the clock.</string>
    <string name="preference_show_notifications">Show Notifications</string>
    <string name="preference_heads_up">Show Heads-Up Overlays</string>
    <string name="preference_heads_up_desc">Notifications will \'peek\' from the top of the screen whenever an important notification is received.</string>
    <string name="preference_heads_up_duration">Heads-Up Overlay Duration (seconds)</string>
    <string name="preference_heads_up_duration_desc">Set the amount of time for the app to show a heads-up notification for.</string>
    <string name="preference_battery_percent">Display Battery Percent</string>
    <string name="preference_battery_percent_desc">Shows the battery percentage next to the icon in the status bar.</string>
    <string name="preference_bar_color_auto">Resource-Based Colors</string>
    <string name="preference_bar_color_auto_desc">Picks the status bar color from the current application. This may cause a significant decrease in performance depending on the device.</string>
    <string name="preference_bar_color_chooser">Default Status Bar Color</string>
    <string name="preference_app_colors">Screen-Specific Colors</string>
    <string name="preference_app_colors_desc">Set the color for the status bar to use on a specific screen. This will override any other color options provided the \'automatic status bar coloring\' option is enabled.</string>
    <string name="preference_transparent_home">Transparency on Home Screen</string>
    <string name="preference_transparent_home_desc">This option sets the status bar\'s background as the current wallpaper when the home screen is displayed. This setting will not work correctly on live wallpapers or if your home screen\'s scrolling wallpaper option is enabled.</string>
    <string name="preference_dark_icons">Contrasting Icon Colors</string>
    <string name="preference_dark_icons_desc">Adjusts the color of the icons to avoid invisible or hard to see icons on light backgrounds.</string>
    <string name="preference_tinted_icons">Tinted Icons</string>
    <string name="preference_tinted_icons_desc">Changes the color of the icons instead of the status bar background, which will be set to the default color.</string>
    <string name="preference_show_battery_icon">Show Battery Icon</string>
    <string name="preference_icon_style">Icon Style</string>
    <string name="preference_show_network_icon">Show Network Icon</string>
    <string name="preference_network_icon">Network Icon Style</string>
    <string name="preference_dual_sim">Dual Sim</string>
    <string name="preference_dual_sim_desc">If your phone has more than one sim card, this option will show two signal indicators instead of one.</string>
    <string name="preference_data">Show Data Connection</string>
    <string name="preference_data_desc">Shows whether the data connection is 2G, 3G, 4G, or unknown/none (doesn\'t show anything).</string>
    <string name="preference_show_wifi_icon">Show Wifi Icon</string>
    <string name="preference_wifi_icon">Wifi Icon Style</string>
    <string name="preference_show_gps_icon">Show GPS Icon</string>
    <string name="preference_gps_icon">GPS Icon Style</string>
    <string name="preference_show_bluetooth_icon">Show Bluetooth Icon</string>
    <string name="preference_bluetooth_icon">Bluetooth Icon Style</string>
    <string name="preference_show_airplane_mode_icon">Show Airplane Mode Icon</string>
    <string name="preference_airplane_mode_icon">Airplane Mode Icon Style</string>
    <string name="preference_show_alarm_icon">Show Alarm Clock Icon</string>
    <string name="james_desc">Android developer and professional cabbage eater.</string>
    <string name="anas_desc">Better known as the Oreo lord, this guy can add more butter to buttery interfaces.</string>
    <string name="vuk_desc">The great lord of Material Design, yeah he makes icons and stuff.</string>
    <string name="ghost_desc">A graphic designer, web designer, and the owner of technologx.com.</string>
    <string name="google_icons_desc">Accounting for most of the icons in the app, Google Design has a large database of icons to choose from.</string>
    <string name="md_icons_desc">Made by many various contributors, this collection of icons contains useful resources unavailable from Google\'s site.</string>
    <string name="icons8_icons_desc">57,700 free flat icons in any format, size and color in 20 seconds.</string>
</resources>